--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,8 @@ jobs:
         with:
             key: "1" # increment this to bust the cache if needed
 
+      - uses: taiki-e/install-action@nextest
+
       - name: Rustfmt
         uses: actions-rs/cargo@v1
         with:
@@ -60,8 +62,8 @@ jobs:
       - name: Tests
         uses: actions-rs/cargo@v1
         with:
-          command: test
-          args: --all ${{ matrix.flags }}
+          command: nextest
+          args: run --all ${{ matrix.flags }}
 
 
   python-virtualenv:
