--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,8 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
-version: 2.1
-
-orbs: 
+version: '2.1'
+orbs:
   rust: circleci/rust@1.6.0
-
 workflows:
   production:
     jobs:
       - rust/lint-test-build:
-          release: false
+          release: true
